fix issue z-index

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -54,6 +54,7 @@ header{
                 min-width: 240px;
                 position: absolute;
                 background-color: #7f00b2;
+                z-index: 50;
                 & li{
                     list-style: none;
                     margin: 0;
